--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,9 +9,6 @@
 <body>
     <h1>Hello From Express Template</h1>
 {{>footer}}
-//javascipt file
-    <script src="js/script.js"></script>
-    {{!-- api call using async await --}}
-        <script src="js/api_call.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
